--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="container">
 			<nav class="navigation">
 				<div class="logo">
-					<img src="images/logo.jpeg" alt="">
+					<img src="logo.jpeg" alt="">
 				</div>
 				<ul id="sidemenu">
 					<li><a href="#header">Home </a></li>
