--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="row-col1">
-					<img src="images/about-img.png" alt="">
+					<img src="about-img.png" alt="">
 				</div>
 				<div class="row-col2">
 					<div class="col2-row1">
@@ -99,7 +99,7 @@
  		<h1 class="sub-title">My Work</h1>
  		<div class="work-list">
  			<div class="work">
- 				<img src="images/img1.jpeg" alt="">
+ 				<img src="img1.jpeg" alt="">
  				<div class="layer">
  					<h5>Portfolio website</h5>
  					<p>This website is a Portfolio website and I made this website.</p>
@@ -107,7 +107,7 @@
  				</div>
  			</div>
  			<div class="work">
- 				<img src="images/img2.jpeg" alt="">
+ 				<img src="img2.jpeg" alt="">
  				<div class="layer">
  					<h5>Portfolio website</h5>
  					<p>This website is a Portfolio website and I made this website.</p>
@@ -115,7 +115,7 @@
  				</div>
  			</div>
  			<div class="work">
- 				<img src="images/img1.jpeg" alt="">
+ 				<img src="img1.jpeg" alt="">
  				<div class="layer">
  					<h5>Portfolio website</h5>
  					<p>This website is a Portfolio website and I made this website.</p>
